PDF interpreter - fix PageList processing

Bug #707137 "Error processing PDF while using the parameter -sPageList"

There are actually 2 problems; firstly a copy/paste error of the
operand stack index when returning the page list meant that the values
were returned in reverse order.

Secondly the PageList string wasn't actually being passed as an operand
at all.

This only affects the PDF interpreter because it (unfortunately) uses a
different mechanism from the PostScript interpreter.